[Bootstrap5] Fix footer alignment of items by using 4 cols
 - show shiro shield on smaller screens

--- a/jbake/assets/css/base.css
+++ b/jbake/assets/css/base.css
@@ -82,12 +82,12 @@ body {
   margin-left: 50px;
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 768px) {
   .footer-shield {
     position: absolute;
     width: 103px;
     height: 113px;
-    right: 80px;
+    right: 40px;
     top: -80px;
     background:url('/img/footer-shield.png') no-repeat;
   }
